--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,48 +1,22 @@
 version: 2.1
-
 orbs:
-  architect: giantswarm/architect@5.0.0
+  architect: giantswarm/architect@5.11.6
 
 workflows:
-  build-workflow:
+  package-and-push-chart-on-tag:
     jobs:
-      - architect/go-test:
-          name: go-test
-          filters:
-            # Trigger job also on git tag.
-            tags:
-              only: /^v.*/
-      - builddocker:
-          context:
-            - architect
-          filters:
-            tags:
-              only: /^v.*/
-
-jobs:
-  builddocker:
-    machine:
-      image: ubuntu-2204:2023.07.2
-    steps:
-      - checkout
-      - run:
-          name: "Push to gsoci"
-          command: |
-            REGISTRY_SERVER=gsoci.azurecr.io
-            REGISTRY=${REGISTRY_SERVER}/giantswarm
-            echo "$ACR_GSOCI_PASSWORD" | docker login --username $ACR_GSOCI_USERNAME --password-stdin ${REGISTRY_SERVER}
-            [ -z "${CIRCLE_TAG}" ] && CIRCLE_TAG=v0.0.1-dev
-
-            curl -sL https://raw.githubusercontent.com/crossplane/crossplane/master/install.sh | sh
-
-            docker buildx build . -t ${REGISTRY}/${CIRCLE_PROJECT_REPONAME}:${CIRCLE_TAG}
-
-            echo "triggering : ./crossplane xpkg build -f package --embed-runtime-image=${REGISTRY}/${CIRCLE_PROJECT_REPONAME}:${CIRCLE_TAG}"
-            ./crossplane xpkg build -f package --embed-runtime-image=${REGISTRY}/${CIRCLE_PROJECT_REPONAME}:${CIRCLE_TAG}
-
-            cd package
-            ls
-            echo "triggering : ./crossplane xpkg push ${REGISTRY}/${CIRCLE_PROJECT_REPONAME}:${CIRCLE_TAG}"
-            ../crossplane xpkg push ${REGISTRY}/${CIRCLE_PROJECT_REPONAME}:${CIRCLE_TAG}
-
-            echo "Pushed to ${REGISTRY}/${CIRCLE_PROJECT_REPONAME}:${CIRCLE_TAG}"
+    - architect/push-to-app-catalog:
+        context: architect
+        executor: app-build-suite
+        name: push-to-app-catalog
+        app_catalog: giantswarm-catalog
+        app_catalog_test: giantswarm-test-catalog
+        chart: cert-manager-crossplane-resources
+          # Trigger job on git tag.
+        filters:
+          tags:
+            only: /^v.*/
+          branches:
+            ignore:
+            - main
+            - master
