--- a/helm/cert-manager-crossplane-resources/templates/iam.yaml
+++ b/helm/cert-manager-crossplane-resources/templates/iam.yaml
@@ -26,7 +26,7 @@ spec:
             "Action": "sts:AssumeRoleWithWebIdentity",
             "Condition": {
               "StringLike": {
-                "{{$oidcDomain}}:sub": "system:serviceaccount:cert-manager:cert-manager-app"
+                "{{$oidcDomain}}:sub": "system:serviceaccount:kube-system:cert-manager-app"
               }
             }
           }
