--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ workflows:
         name: push-to-app-catalog
         app_catalog: giantswarm-catalog
         app_catalog_test: giantswarm-test-catalog
-        chart: cert-manager-crossplane-resources
+        chart: cm-crossplane-resources
           # Trigger job on git tag.
         filters:
           tags:
