update role with sts:AssumeRoleWithWebIdentity

--- a/helm/cm-crossplane-resources/templates/iam.yaml
+++ b/helm/cm-crossplane-resources/templates/iam.yaml
@@ -25,6 +25,9 @@ spec:
             },
             "Action": "sts:AssumeRoleWithWebIdentity",
             "Condition": {
+              "StringEquals": {
+                "{{$oidcDomain}}:aud": "sts.amazonaws.com"
+              },
               "StringLike": {
                 "{{$oidcDomain}}:sub": "system:serviceaccount:kube-system:cert-manager-app"
               }
