--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ workflows:
         name: package-and-push-chart
         app_catalog: cluster-catalog
         app_catalog_test: cluster-test-catalog
-        chart: cilium-crossplane-resources
+        chart: cm-crossplane-resources
           # Trigger job on git tag.
         filters:
           tags:
